--- a/smartadmin/src/main/webapp/secured/menu/sidebar.xhtml
+++ b/smartadmin/src/main/webapp/secured/menu/sidebar.xhtml
@@ -72,6 +72,14 @@
                             <span class="pcoded-mtext">Academic Term</span>
                         </a>
                     </li>
+                    <li class="">
+                        <a href="#{application.contextPath}/#{msg.sidebar_url}/exams-parameters.xhtml" class="waves-effect waves-dark">
+                            <span class="pcoded-micon">
+                                <i class="feather icon-menu"></i>
+                            </span>
+                            <span class="pcoded-mtext">Exams Parameters</span>
+                        </a>
+                    </li>
                     <li class="pcoded-hasmenu">
                         <a href="javascript:void(0)" class="waves-effect waves-dark">
                             <span class="pcoded-micon"><i class="feather icon-sidebar"></i></span>
