--- a/smartweb/src/main/webapp/secured/templatesUI.xhtml
+++ b/smartweb/src/main/webapp/secured/templatesUI.xhtml
@@ -8,7 +8,7 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title>#{msg.title}</title> 
+        <title>#{appSession.currentUser.school} - Staff</title> 
         <link rel="icon" href="#{application.contextPath}/assets/images/favicon.ico" type="image/x-icon"/>
         <!-- Google font-->     
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet"/>
