--- a/smartadmin/src/main/webapp/secured/menu/top-nav.xhtml
+++ b/smartadmin/src/main/webapp/secured/menu/top-nav.xhtml
@@ -9,7 +9,7 @@
             <div class="navbar-logo">
                 <a href="#{application.contextPath}/secured/index.xhtml">
                     <!--<img class="img-fluid" src="{application.contextPath}/assets/images/user.png" alt="Theme-Logo" />-->
-                    Smart School - Primary/JHS
+                    #{appSession.currentUser.school}
                 </a>
                 <a class="mobile-menu" id="mobile-collapse" href="#!">
                     <i class="feather icon-menu icon-toggle-right"></i>
