--- a/smartadmin/src/main/webapp/secured/pages/school-profile.xhtml
+++ b/smartadmin/src/main/webapp/secured/pages/school-profile.xhtml
@@ -19,7 +19,7 @@
                                 <h:form class="spaced-form" id="schoolForm">
                                     <h:panelGrid columns="2">
                                         <span>#{msg.school} #{msg.name}</span>
-                                        <p:inputText value="#{schoolController.school.schoolName}"/>
+                                        <p:inputText value="#{schoolController.school.schoolName}" required="true"/>
 
                                         <span>#{msg.address}</span>
                                         <p:inputText value="#{schoolController.school.address}" required="true"/>
@@ -28,10 +28,10 @@
                                         <p:inputText value="#{schoolController.school.telephone}" required="true"/>
 
                                         <span>#{msg.website}</span>
-                                        <p:inputText value="#{schoolController.school.website}" required="true"/>
+                                        <p:inputText value="#{schoolController.school.website}"/>
 
                                         <p:commandButton action="#{schoolController.clearSchool()}" class="kbtn-default mx-3" value="#{msg.clear}" icon="#{msg.clear_icon}" immediate="true" update="@form"/>
-                                        <p:commandButton action="#{schoolController.saveSchool()}" icon="#{msg.check_icon_circle}" class="kbtn-success" value="#{schoolController.optionText}" update="@form, :schoolTable"/>
+                                        <p:commandButton rendered="#{schoolController.school.schoolName != null}" action="#{schoolController.saveSchool()}" icon="#{msg.check_icon_circle}" class="kbtn-success" value="#{schoolController.optionText}" update="@form, :schoolTable"/>
                                     </h:panelGrid>
                                 </h:form>
                             </div>
@@ -70,10 +70,7 @@
                                         </p:column>
                                         
                                         <p:column headerText="#{msg.action}" style="width: 100px;" exportable="false">
-                                            <p:menuButton value="#{msg.manage}">
-                                                <p:menuitem action="#{schoolController.editSchool(school)}" icon="fa fa-edit" class="text-info" value="#{msg.edit}" update=":schoolForm"/>
-                                                <p:menuitem action="#{schoolController.deleteSchool(school)}" icon="fa fa-remove" class="text-danger" value="#{msg.delete}" update="@form"/>
-                                            </p:menuButton>
+                                            <p:commandButton action="#{schoolController.editSchool(school)}" icon="fa fa-edit" value="#{msg.edit}" update=":schoolForm"/>
                                         </p:column>
                                     </p:dataTable>
                                 </h:form>
